implementação do botão de WhatsApp flutuante

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -176,6 +177,13 @@
         </form>
     </section>
 
+    <!-- button WhatsApp -->
+    <div id="whatsapp-button">
+        <a href="https://api.whatsapp.com/send?phone=19996588865&text=Sua%20mensagem%20aqui" target="_blank">
+            <i class="fa fa-whatsapp fa-2x"></i>
+        </a>
+    </div>
+    
     <!-- scroll reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
