--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="#"><i class='bx bxl-linkedin-square'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <!-- <a href="#" class="btn">Download CV</a> -->
         </div>
 
         <div class="home-img">
@@ -57,7 +57,7 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci eaque doloremque quasi rem!
                 Consequuntur quod obcaecati accusantium illo ullam doloribus, maiores voluptatum impedit in deserunt velit.
                 Doloribus molestias optio quasi.</p>
-                <a href="#" class="btn">Leia Mais</a>
+                <!-- <a href="#" class="btn">Leia Mais</a> -->
         </div>
     </section>
 
