--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">Sobre Mim</a>
             <a href="#services">Serviços</a>
-            <a href="#portfolio">Portfolio</a>
+            <!-- <a href="#portfolio">Portfolio</a> -->
             <a href="#contato">Contato</a>
         </nav>
     </header>
@@ -32,10 +32,11 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore aliquam, modi aspernatur placeat.</p>
 
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-telegram'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100090680324994"><i class='bx bxl-facebook'></i></a>
+                <a href="https://t.me/joaohp"><i class='bx bxl-telegram'></i></a>
+                <a href="https://www.instagram.com/joaohp_/"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.linkedin.com/in/jo%C3%A3o-henrique-30aa50196/"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/joaohp020"><i class='bx bxl-github'></i></a>
             </div>
             <!-- <a href="#" class="btn">Download CV</a> -->
         </div>
@@ -48,15 +49,15 @@
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="img/me_01.jpg" alt="">
+            <img src="img/portfolio_02.jpeg" alt="">
         </div>
 
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
             <h3>FullStack Developer!</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci eaque doloremque quasi rem!
-                Consequuntur quod obcaecati accusantium illo ullam doloribus, maiores voluptatum impedit in deserunt velit.
-                Doloribus molestias optio quasi.</p>
+            <p>Trabalho a 5 anos no mercado de tecnologia como Desenvolvedor Web FullStack. Nesse percurso
+                atuei em diversos projetos para grandes e pequenas empresas projetando soluções para
+                acelerar seus processos no dia a dia.</p>
                 <!-- <a href="#" class="btn">Leia Mais</a> -->
         </div>
     </section>
@@ -68,32 +69,32 @@
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Quaerat impedit commodi blanditiis sunt tempora cumque dolor fugit numquam quo adipisci.</p>
-                <a href="#" class="btn">Leia Mais</a>
+                <h3>Desenvolvimento Web</h3>
+                <p>Neste pacote é realizado o desenvolvimento de Landing Page, WebSite, Site Institucional,
+                    Sistema E-commerce e dentre outros conforme a sua necessidade.</p>
+                <!-- <a href="#" class="btn">Leia Mais</a> -->
             </div>
 
             <div class="services-box">
                 <i class='bx bxs-paint' ></i>
-                <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Quaerat impedit commodi blanditiis sunt tempora cumque dolor fugit numquam quo adipisci.</p>
-                <a href="#" class="btn">Leia Mais</a>
+                <h3>Ajustes e Melhorias</h3>
+                <p>Realizo também ajustes e implementações em processos ja desenvolvidos, e melhorias no visual da sua página para
+                    atender melhor ao usuário</p>
+                <!-- <a href="#" class="btn">Leia Mais</a> -->
             </div>
-
+<!-- 
             <div class="services-box">
                 <i class='bx bx-bar-chart-alt' ></i>
                 <h3>Marketing Digital</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Quaerat impedit commodi blanditiis sunt tempora cumque dolor fugit numquam quo adipisci.</p>
                 <a href="#" class="btn">Leia Mais</a>
-            </div>
+            </div> -->
         </div>
     </section>
 
     <!-- portfolio section design -->
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
         <h2 class="heading">Ultimos <span>Projetos</span></h2>
 
         <div class="portfolio-container">
@@ -157,7 +158,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- contact section design -->
     <section class="contato" id="contato">
