--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <!-- home section design -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, It's me</h3>
+            <h3>Olá! Me chamo</h3>
             <h1>João Henrique</h1>
-            <h3>And I'm a <span>FullStack Developer</span></h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore aliquam, modi aspernatur placeat.</p>
+            <h3>Sou <span>Desenvolvedor FullStack</span></h3>
+            <p>Esse WebSite tem por objetivo te conectar com a solução para o seu negócio.</p>
 
             <div class="social-media">
                 <a href="https://www.facebook.com/profile.php?id=100090680324994"><i class='bx bxl-facebook'></i></a>
