--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <h3>Olá! Me chamo</h3>
             <h1>João Henrique</h1>
             <h3>Sou <span>Desenvolvedor FullStack</span></h3>
-            <p>Esse WebSite tem por objetivo te conectar com a solução para o seu negócio.</p>
+            <!-- <p>Esse WebSite tem por objetivo te conectar com a solução para o seu negócio.</p> -->
+            <p>Aqui estão meus links uteis</p>
 
             <div class="social-media">
                 <a href="https://www.facebook.com/profile.php?id=100090680324994"><i class='bx bxl-facebook'></i></a>
